fix: align internship grid dividers

--- a/resources/css/redesign-community.css
+++ b/resources/css/redesign-community.css
@@ -559,6 +559,13 @@
     padding: 40px;
 }
 
+@media (min-width: 1024px) {
+    .dlf-internship-detail-page .dlf-member-detail-head__logo {
+        border-left: 0;
+        box-shadow: inset 1px 0 0 var(--dlf-line);
+    }
+}
+
 .dlf-member-card__body {
     display: flex;
     min-height: 90px;
